@@ -21,6 +21,7 @@ Test::TidyAll.minimum_perl = 5.010000
 [Prereqs::Soften]
 module = Ref::Util
 module = Sub::Util
+module = XString
 
 [Prereqs / DevelopRequires]
 Moo = 0
