@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Replaced the use of B with XString if it is installed. The latter is much
+  smaller and provides the one subroutine from B we cared about. Based on GH
+  #15. Implemented by Nicolas R.
+
+
 0.43     2018-10-26
 
 - Optimized compile-time operations to make Specio itself quicker to
